# 16662-RA-Perception

./: CMakeLists.txt  README.md  package.xml
scripts/: perception.py  shape_gen.py
src/: perception_planner_node.py
srv/: PerceivePlan.srv
